--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             background-color: var(--secondary-color);
             border-radius: 8px;
             color: var(--text-color);
+            line-height: 1.5;
         }
 
         #options {
@@ -89,10 +90,15 @@
             color: var(--text-color);
         }
 
-        .option-button:hover {
+        .option-button:hover:not(:disabled) {
             background-color: var(--primary-color);
             color: white;
             transform: translateY(-2px);
+        }
+
+        .option-button:disabled {
+            cursor: not-allowed;
+            opacity: 0.7;
         }
 
         .option-button.correct {
