--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI vs 初级律师知识竞赛</title>
+    <title>AI vs Junior Lawyers Fun Facts</title>
     <style>
         :root {
             --primary-color: #4a90e2;
@@ -163,13 +163,13 @@
 </head>
 <body>
     <div class="header">
-        <h1>AI vs 初级律师知识竞赛</h1>
+        <h1>AI vs Junior Lawyers Fun Facts</h1>
     </div>
     
     <div id="game-container">
         <div class="stats-container">
-            <div id="timer">剩余时间: 30秒</div>
-            <div id="score">得分: 0</div>
+            <div id="timer">Time Left: 30s</div>
+            <div id="score">Score: 0</div>
         </div>
         <div id="question"></div>
         <div id="options"></div>
