--- a/index.html
+++ b/index.html
@@ -159,6 +159,41 @@
                 padding: 12px 15px;
             }
         }
+
+        @keyframes flame {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        .feedback-message {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px 40px;
+            border-radius: 10px;
+            font-size: 1.5em;
+            font-weight: bold;
+            z-index: 1000;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        .feedback-correct {
+            background-color: var(--success-color);
+            color: white;
+            animation: flame 0.5s ease infinite;
+        }
+
+        .feedback-incorrect {
+            background-color: var(--error-color);
+            color: white;
+        }
+
+        .feedback-visible {
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
@@ -175,6 +210,7 @@
         <div id="options"></div>
     </div>
 
+    <div id="feedback" class="feedback-message"></div>
     <script type="module" src="game.js"></script>
 </body>
 </html> 
